--- a/hts-cache/winprofile.ini
+++ b/hts-cache/winprofile.ini
@@ -73,6 +73,6 @@ MIMEDefsMime5=
 MIMEDefsMime6=
 MIMEDefsMime7=
 MIMEDefsMime8=
-CurrentUrl=https://monetizevideosmotivacionais.shop/
+CurrentUrl=https://matheusbusiness.site/monetizando-com-video-virais/
 CurrentAction=0
 CurrentURLList=
